# Self-improving-trading-system

./: .gitignore  LSTM_model_of_GOOGL_stock.ipynb  README.md  app.py  best_stock_model.pth  data_fetcher.py  main.py  model.py  predict.py  pyproject.toml  requirements.txt  run.py  scaler.pkl  train.py
models/: best_stock_model.pth  scaler.pkl
notebooks/: LSTM_model_of_GOOGL_stock.ipynb
scripts/: app.py
src/: __init__.py
src/trading_system/: __init__.py  config.py  data_fetcher.py  predict.py  train.py
