[project]
name = "self-improving-trading-system"
version = "0.1.0"
description = "A self-improving LSTM-based stock trading system with real-time predictions and model fine-tuning capabilities"
requires-python = ">=3.11"
license = {text = "MIT"}
keywords = ["trading", "lstm", "machine-learning", "stocks", "prediction"]
dependencies = [
    "matplotlib>=3.10.3",
    "numpy>=2.3.1",
    "pandas>=2.3.1",
    "plotly>=6.2.0",
    "scikit-learn>=1.7.1",
    "streamlit>=1.47.0",
    "torch>=2.7.1",
    "yfinance>=0.2.65",
]